# esp32_cde

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  Kconfig.projbuild  MAFTEST.md  MAF_IMPLEMENTATION.md  MAF_QUICKSTART.md  README.md  UNITTEST.md  benchmark_c_vs_py.py  gen_toy_data.py  main.c  qemu-runner.py  sdkconfig.defaults  setup_test_model.py  test_cli.sh  test_config.txt
.github/workflows/: build_cli.yml  can_nvs_test.yml  ci.yml
cli/: CMakeLists.txt  benchmark_training.cpp  test_batched.cpp  test_lorenz_stats.cpp
components/can_nvs/: CMakeLists.txt  COMPRESSION_ANALYSIS.md  README.md  validate.sh
components/can_nvs/examples/basic/: basic_example.c
components/can_nvs/include/: can_nvs.h
components/can_nvs/src/: can_nvs.c
components/can_nvs/test/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
components/can_nvs/test/main/: CMakeLists.txt  test_can_nvs.c
components/esp32_cde/: CMakeLists.txt
components/esp32_cde/include/: cde_internal.h  esp32_cde.h  maf.h  maf_batched.h
components/esp32_cde/src/: cde_buffer.c  cde_core.c  cde_math.c  kernels.hpp  maf.c  maf_batched.cpp  util.hpp
components/esp32_cde/test/: CMakeLists.txt  test_maf_inference.c  test_model_blob.h
examples/: maf_demo.c  maf_test_adam.c  maf_test_gradients.c
main/: CMakeLists.txt  esp32_cde.c
python/: README.md  cde_training.py  compare_maf_python.py  export_maf_to_c.py  gen_lorenz_csv.py  maf_mcp.py  plot_lorenz.py  requirements.txt  run_lorenz_workflow.py  test_cde_training.py  test_lorenz.py  test_maf_c.py  test_maf_sampling.py
scripts/: build_test.sh  test_qemu.sh  test_suite.sh
test/: CMakeLists.txt  qemu_runner.py
test/main/: CMakeLists.txt  test_runner_main.c
test/mock_headers/: esp_err.h  esp_heap_caps.h  esp_log.h
